--- a/index.html
+++ b/index.html
@@ -55,11 +55,97 @@
                 </article>
             </section>
             
+        <section class="linha">
+
+        </section>
 
         </section>
 
         <section id="content">
 
+            <article class="post1">
+
+                <picture>
+                    <img src="imagens/post-1.png" alt="post1">
+                </picture>
+
+                <p>Janeiro 04, 2022</p>
+
+                <h2>Começando no ReactJS em 2022</h2>
+
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio doloribus nobis voluptas, consequatur molestias officiis nemo, sapiente eveniet maiores rerum animi debitis amet soluta commodi rem quos veritatis quidem! Excepturi.</p>
+
+            </article>
+
+            <section class="side-post">
+
+                <article class="side-post1">
+
+                    <p>Janeiro 04, 2022</p>
+
+                    <h2>Conheça as principais técnicas para conseguir uma vaga internacional em programação</h2>
+
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione, reprehenderit deleniti perferendis exercitationem inventore quisquam dignissimos dicta totam assumenda quae! Iste libero dicta doloribus in nihil alias repellendus autem dolore!</p>
+
+                </article>
+
+                <article class="retangulo">
+
+                </article>
+
+                <article class="side-post2">
+
+                    <p>Janeiro 04, 2022</p>
+
+                    <h2>Veja a evolução do Front-end na prática</h2>
+
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing ela quae!oloribus in nihil alias repellendus autem dolore!</p>
+
+                </article>
+
+            </section>
+
+            <article class="post2">
+
+                <picture>
+                    <img src="imagens/post-2.png" alt="post2">
+                </picture>
+
+                <p>Janeiro 04, 2022</p>
+
+                <h2>Começando no ReactJS em 2022</h2>
+
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio doloribus nobis voluptas, consequatur molestias officiis nemo, sapiente eveniet maiores rerum animi debitis amet soluta commodi rem quos veritatis quidem! Excepturi.</p>
+
+            </article>
+
+            <article class="post3">
+
+                <picture>
+                    <img src="imagens/post-3.png" alt="post3">
+                </picture>
+
+                <p>Janeiro 04, 2022</p>
+
+                <h2>Começando no ReactJS em 2022</h2>
+
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio doloribus nobis voluptas, consequatur molestias officiis nemo, sapiente eveniet maiores rerum animi debitis amet soluta commodi rem quos veritatis quidem! Excepturi.</p>
+
+            </article>
+
+            <article class="post4">
+
+                <picture>
+                    <img src="imagens/post-4.png" alt="post4">
+                </picture>
+
+                <p>Janeiro 04, 2022</p>
+
+                <h2>Começando no ReactJS em 2022</h2>
+
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio doloribus nobis voluptas, consequatur molestias officiis nemo, sapiente eveniet maiores rerum animi debitis amet soluta commodi rem quos veritatis quidem! Excepturi.</p>
+
+            </article>
 
         </section>
 
