ajuste na busca e link de veja mais

--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
                     <a href="#">Contato</a>
                 </menu>
 
-                <article>
-                    <label for="ipesquisa"></label>
+                <article id="busca">
+                    <label for="iprocura"></label>
                     <input type="search" name="procura" id="iprocura" placeholder="Buscar">
+                    <input class="botao" type="submit" value="Enviar">
                 </article>
             </header>
 
